# ESP32_ZB_Automatisation

ESP32-C6_Zigbee_Gateway/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
ESP32-C6_Zigbee_Gateway/components/gw_core/: CMakeLists.txt
ESP32-C6_Zigbee_Gateway/components/gw_core/include/gw_core/: automation_compiled.h  device_registry.h  (+11 more)
ESP32-C6_Zigbee_Gateway/components/gw_core/src/: automation_compiled.c  automation_store.c  cbor.c  device_registry.c  device_storage.c  device_storage_bridge.c  event_bus.c  gw_uart_proto.c  net_fetch.c  net_time.c  rules_engine.c  storage.c  weather.c  zb_model.c
ESP32-C6_Zigbee_Gateway/components/gw_http/: CMakeLists.txt
ESP32-C6_Zigbee_Gateway/components/gw_http/src/: gw_http.c  gw_rest.c  gw_ws.c
ESP32-C6_Zigbee_Gateway/components/gw_zigbee/: CMakeLists.txt
ESP32-C6_Zigbee_Gateway/components/gw_zigbee/src/: gw_zigbee.c
ESP32-C6_Zigbee_Gateway/docs/: architecture.md  architecture_c6_s3.md  c6_s3_flatbuffer_architecture.md  c6_uart_link.md  event_protocol_v1.md
ESP32-C6_Zigbee_Gateway/docs/zigbee docs/: zcl-attributes-catalog.md  zcl-cheatsheet.full.md  zcl-cheatsheet.md  zigbee-spec-cheatsheet.full.md  zigbee-spec-cheatsheet.md
ESP32-C6_Zigbee_Gateway/main/: CMakeLists.txt  esp_zigbee_gateway.c  esp_zigbee_gateway.h  gw_cloud_sync.c  gw_cloud_sync.h  gw_uart_link.c  gw_uart_link.h  gw_wifi.c  gw_wifi.h  gw_wifi_sta.c  gw_wifi_sta.h  wifi_aps_config.example.h
ESP32-C6_Zigbee_Gateway/web/: package-lock.json  package.json
ESP32-C6_Zigbee_Gateway/web/src/: App.css  App.jsx  index.css
ESP32-C6_Zigbee_Gateway/web/src/pages/: Automations.jsx  Device.jsx  Events.jsx
ESP32-C6_Zigbee_Gateway/web/src/zigbee/: zcl.js
ESP32-H2_switch/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
ESP32-H2_switch/main/: CMakeLists.txt  esp_zb_switch.c  esp_zb_switch.h  switch_driver.c  switch_driver.h
ESP32-S3_1.5inch-lvgl/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
ESP32-S3_1.5inch-lvgl/components/espressif__esp_lcd_touch_cst816s/: esp_lcd_touch_cst816s.c
ESP32-S3_1.5inch-lvgl/components/espressif__esp_lcd_touch_cst816s/include/: esp_lcd_touch_cst816s.h
ESP32-S3_1.5inch-lvgl/components/gw_core/: CMakeLists.txt
ESP32-S3_1.5inch-lvgl/components/gw_core/include/gw_core/: action_exec.h  automation_store.h  cbor.h  device_fb_store.h  device_storage.h  device_storage_bridge.h  event_bus.h  group_store.h  gw_uart_proto.h  project_settings.h  runtime_sync.h  state_store.h  storage.h  types.h  weather.h  zb_model.h
ESP32-S3_1.5inch-lvgl/components/gw_core/src/: action_exec.c  automation_compiled.c  automation_store.c  cbor.c  device_fb_store.c  device_registry.c  device_storage_bridge.c  event_bus.c  group_store.c  net_time.c  project_settings.c  rules_engine.c  runtime_sync.c  sensor_store.c  state_store.c  storage.c  weather.c  zb_classify.c  zb_model.c
ESP32-S3_1.5inch-lvgl/components/gw_http/: CMakeLists.txt
ESP32-S3_1.5inch-lvgl/components/gw_http/src/: gw_http.c  gw_rest.c  gw_ws.c
ESP32-S3_1.5inch-lvgl/components/gw_zigbee/: CMakeLists.txt  Kconfig
ESP32-S3_1.5inch-lvgl/components/gw_zigbee/src/: gw_zigbee_uart.c
ESP32-S3_1.5inch-lvgl/docs/: APP_STATE_FSM.md  APP_STATE_FSM_TO_DO.md  ARCHITECTURE.md  ha_map.json  s3_backend_migration.md
ESP32-S3_1.5inch-lvgl/docs/HA_docker_compose/: docker-comose.yml
ESP32-S3_1.5inch-lvgl/fonts/: Montserrat_20.c  Montserrat_30.c  Montserrat_40.c  Montserrat_50.c  Montserrat_70.c  README.md  fonts.h
ESP32-S3_1.5inch-lvgl/icons/: alien.c  clear-night.c  clear.c  cloudy.c  fog.c  hail.c  icons.h  lightning-rainy.c  lightning.c  overcast.c  partlycloudy.c  pouring.c  rainy.c  snowy-rainy.c  snowy.c  sunny.c  thermometer.c  windy-variant.c  windy.c
ESP32-S3_1.5inch-lvgl/main/: CMakeLists.txt  gw_wifi.c  gw_wifi.h  idf_component.yml  main.cpp  s3_geoip_http.c  s3_geoip_http.h  s3_weather_http.c  s3_weather_http.h  s3_weather_service.c  s3_weather_service.h  wifi_aps_config.h
ESP32-S3_1.5inch-lvgl/main/devices/: devices_init.cpp  devices_init.h  display_init.cpp  display_init.hpp  input_init.cpp  input_init.hpp  lvgl_init.cpp  lvgl_init.hpp  touch_init.cpp  touch_init.hpp
ESP32-S3_1.5inch-lvgl/main/ui/: ui_actions.cpp  ui_actions.hpp  ui_app.cpp  ui_app.hpp  ui_control_ack.cpp  ui_control_ack.hpp  ui_events_bridge.cpp  ui_events_bridge.hpp  ui_mapper.cpp  ui_mapper.hpp  ui_screen_devices.cpp  ui_screen_devices.hpp  ui_screen_saver.cpp  ui_screen_saver.hpp  ui_store.cpp  ui_store.hpp  ui_style.hpp  ui_widgets.cpp  ui_widgets.hpp
ESP32-S3_1.5inch-lvgl/web/: package-lock.json
ESP32-S3_1.5inch-lvgl/web/scripts/: esp.mjs
ESP32-S3_1.5inch-lvgl/web/src/: App.css  App.jsx  api.js  cbor.js  deviceBlob.js  gateway.jsx  groupsStore.js  index.css  main.jsx
ESP32-S3_1.5inch-lvgl/web/src/components/: EndpointWidgets.jsx  WeatherHeaderWidget.jsx
ESP32-S3_1.5inch-lvgl/web/src/pages/: Automations.jsx  Device.jsx  Devices.jsx  Events.jsx  Groups.jsx  Settings.jsx
ESP32-S3_1.5inch-lvgl/web/src/zigbee/: eventFormat.js  stateFormat.js
(+11 files in other folders)
