idf_component_register(
    SRCS
        "main.cpp"
        "gw_wifi.c"
        "s3_geoip_http.c"
        "s3_weather_http.c"
        "s3_weather_service.c"
        "devices/devices_init.cpp"
        "devices/display_init.cpp"
        "devices/lvgl_init.cpp"
        "devices/input_init.cpp"
        "devices/touch_init.cpp"
        "ui/ui_app.cpp"
        "ui/ui_mapper.cpp"
        "ui/ui_store.cpp"
        "ui/ui_actions.cpp"
        "ui/ui_control_ack.cpp"
        "ui/ui_events_bridge.cpp"
        "ui/ui_widgets.cpp"
        "ui/ui_screen_devices.cpp"
        "ui/ui_screen_saver.cpp"
        "${CMAKE_SOURCE_DIR}/fonts/Montserrat_20.c"
        "${CMAKE_SOURCE_DIR}/fonts/Montserrat_30.c"
        "${CMAKE_SOURCE_DIR}/fonts/Montserrat_40.c"
        "${CMAKE_SOURCE_DIR}/fonts/Montserrat_50.c"
        "${CMAKE_SOURCE_DIR}/fonts/Montserrat_70.c"
        "${CMAKE_SOURCE_DIR}/icons/alien.c"
        "${CMAKE_SOURCE_DIR}/icons/clear.c"
        "${CMAKE_SOURCE_DIR}/icons/clear-night.c"
        "${CMAKE_SOURCE_DIR}/icons/cloudy.c"
        "${CMAKE_SOURCE_DIR}/icons/fog.c"
        "${CMAKE_SOURCE_DIR}/icons/hail.c"
        "${CMAKE_SOURCE_DIR}/icons/lightning.c"
        "${CMAKE_SOURCE_DIR}/icons/lightning-rainy.c"
        "${CMAKE_SOURCE_DIR}/icons/overcast.c"
        "${CMAKE_SOURCE_DIR}/icons/partlycloudy.c"
        "${CMAKE_SOURCE_DIR}/icons/pouring.c"
        "${CMAKE_SOURCE_DIR}/icons/rainy.c"
        "${CMAKE_SOURCE_DIR}/icons/snowy.c"
        "${CMAKE_SOURCE_DIR}/icons/snowy-rainy.c"
        "${CMAKE_SOURCE_DIR}/icons/sunny.c"
        "${CMAKE_SOURCE_DIR}/icons/thermometer.c"
        "${CMAKE_SOURCE_DIR}/icons/windy.c"
        "${CMAKE_SOURCE_DIR}/icons/windy-variant.c"
    INCLUDE_DIRS
        "."
        "devices"
        "ui"
        "../fonts"
        "../icons"
    REQUIRES
        freertos
        esp_timer
        driver
        esp_lcd
        esp_lcd_touch
        espressif__esp_lcd_touch_cst816s
        esp_lcd_sh8601
        esp_lvgl_port
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_http_client
        json
        gw_core
        gw_http
        gw_zigbee
)
